crates/carta/tests/snapshots/golden_e2e__rtf__latex__image-goal-size.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Photo
\includegraphics[width=1in,height=0.5in,alt={image}]{4caece539b039b16e16206ea2478f8c5ffb2ca05.png}
and
\includegraphics[width=2in,height=\textheight,keepaspectratio,alt={image}]{30567f6b52af60449a6113d3c80fb9f850b7426a.jpg}
here.
