crates/carta/tests/snapshots/golden_e2e__rtf__latex__line-break.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
one line\\
second line after break.
