crates/carta/tests/snapshots/golden_e2e__rtf__latex__list-adjacent-styles.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\arabic{enumi}.}
\item
  First decimal
\item
  Second decimal
\end{enumerate}

\begin{enumerate}
\def\labelenumi{\alph{enumi}.}
\item
  First alpha
\item
  Second alpha
\end{enumerate}
