crates/carta/tests/snapshots/golden_e2e__rtf__latex__list-ordered-alpha.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\alph{enumi}.}
\setcounter{enumi}{2}
\item
  Gamma
\item
  Delta
\end{enumerate}
