crates/carta/tests/snapshots/golden_e2e__rtf__latex__list-ordered.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\arabic{enumi}.}
\item
  First item
\item
  Second item
\end{enumerate}
