crates/carta/tests/snapshots/golden_e2e__rtf__latex__monospace-code.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Text with \texttt{inline\ code} in it.

\begin{verbatim}
a whole code line
and another line
\end{verbatim}

Back to prose.
