crates/carta/tests/snapshots/golden_e2e__rtf__latex__nested-groups.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\textbf{bold \emph{nested italic} still bold} done.
