crates/carta/tests/snapshots/golden_e2e__rtf__latex__paragraphs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Hello world. This is a paragraph.

A second paragraph with several words.
