crates/carta/tests/snapshots/golden_e2e__rtf__latex__shape-image.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A\pandocbounded{\includegraphics[keepaspectratio,alt={image}]{0db275746ba70a75bf5175616412bddd5236ced5.png}}B
